# cvxgen_cpptest

cvxgen/: CMakeLists.txt  main.cpp  solver.h  testsolver.c
